Add variant persona template files. Update gulpfile with ordering for variants

--- a/src/components/Persona/Persona.less
+++ b/src/components/Persona/Persona.less
@@ -74,7 +74,10 @@
 	}
 
 
-	// Tiny.
+	// Extra Extra Small.
+	// Note: .ms-Persona--tiny is deprecated.
+	// Please use .ms-Persona--xxs.
+	&.ms-Persona--xxs,
 	&.ms-Persona--tiny {
 		height: 30px;
 		padding: 0 10px;
