--- a/src/components/Persona/Persona.ExtraExtraSmall.html
+++ b/src/components/Persona/Persona.ExtraExtraSmall.html
@@ -1,4 +1,4 @@
-<div class="ms-Persona">
+<div class="ms-Persona ms-Persona--xxs">
   <div class="ms-Persona-imageArea">
     <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
     <img class="ms-Persona-image" src="Persona.Person2.png">
@@ -11,3 +11,4 @@
     <div class="ms-Persona-optionalText">Available at 4:00pm</div>
   </div>
 </div>
+
