--- a/src/components/Persona/Persona.ExtraLarge.html
+++ b/src/components/Persona/Persona.ExtraLarge.html
@@ -1,7 +1,8 @@
-<div class="ms-Persona">
+<div class="ms-Persona ms-Persona--xl">
   <div class="ms-Persona-imageArea">
     <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-    <img class="ms-Persona-image" src="../src/components/persona/Persona.Person2.png">
+    <img class="ms-Persona-image" src="Persona.Person2.png">
+    <div class="ms-Persona-presence"></div>
   </div>
   <div class="ms-Persona-details">
     <div class="ms-Persona-primaryText">Alton Lafferty</div>
@@ -10,3 +11,4 @@
     <div class="ms-Persona-optionalText">Available at 4:00pm</div>
   </div>
 </div>
+
