- Changed @ms-fontSize- mixins to be @ms-font-size-

--- a/src/components/Breadcrumb/Breadcrumb.less
+++ b/src/components/Breadcrumb/Breadcrumb.less
@@ -11,7 +11,7 @@
     display: none;
   }
   .ms-Breadcrumb-parent, .ms-Breadcrumb-current {
-    font-size: @ms-fontSize-m;
+    font-size: @ms-font-size-m;
     font-family: @ms-font-family-semilight;
     line-height: 50px;
     color: @ms-color-neutralSecondary;
@@ -40,7 +40,7 @@
     .ms-Breadcrumb-currentLarge {
       display: inline;
       font-family: @ms-font-family-regular;
-      font-size: @ms-fontSize-xl;
+      font-size: @ms-font-size-xl;
       color: @ms-color-themePrimary;
       line-height: 42px;
       margin-right: 20px;
