--- a/src/components/Callout/Callout.less
+++ b/src/components/Callout/Callout.less
@@ -176,7 +176,7 @@
   top: 5px;
   right: 5px;
   padding: 5px;
-  font-size: @ms-fontSize-m;
+  font-size: @ms-font-size-m;
   color: @ms-color-neutralSecondary;
   z-index: (@ms-zIndex-Callout + @ms-zIndex-front);
 }
@@ -199,7 +199,7 @@
   // Title - set size and color
   .ms-Callout-title {
     font-family: @ms-font-family-semilight;
-    font-size: @ms-fontSize-l;
+    font-size: @ms-font-size-l;
     color: @ms-color-neutralPrimary;
   }
 
@@ -210,7 +210,7 @@
     // Title - set size and color
     .ms-Callout-title {
       font-family: @ms-font-family-light;
-      font-size: @ms-fontSize-xxl;
+      font-size: @ms-font-size-xxl;
       color: @ms-color-white;
     }
   }
@@ -222,7 +222,7 @@
     // Title - set size and color
     .ms-Callout-title {
       font-family: @ms-font-family-semilight;
-      font-size: @ms-fontSize-l;
+      font-size: @ms-font-size-l;
       color: @ms-color-white;
     }
   }
@@ -258,11 +258,11 @@
   color: @ms-color-neutralPrimary;
 
   &.ms-Callout-subText--s {
-    font-size: @ms-fontSize-s;
+    font-size: @ms-font-size-s;
   }
 
   &.ms-Callout-subText--m {
-    font-size: @ms-fontSize-m;
+    font-size: @ms-font-size-m;
   }
 }
 
@@ -272,7 +272,7 @@
 .ms-Callout-subTitle {
   margin: 0;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-fontSize-l;
+  font-size: @ms-font-size-l;
   color: @ms-color-neutralPrimary;
 }
 
