--- a/src/components/ChoiceField/ChoiceField.less
+++ b/src/components/ChoiceField/ChoiceField.less
@@ -38,7 +38,7 @@
 		padding-left: 26px;
 		position: absolute;
 		top: -8px;
-		font-size: @ms-fontSize-m;
+		font-size: @ms-font-size-m;
 	}
 
 	&:hover {
