--- a/src/components/ContextualMenu/ContextualMenu.less
+++ b/src/components/ContextualMenu/ContextualMenu.less
@@ -48,7 +48,7 @@
   // Headers
   &.ms-ContextualMenu-item--header {
     color: @ms-color-themePrimary;
-    font-size: @ms-fontSize-s;
+    font-size: @ms-font-size-s;
     text-transform: uppercase;
     height: 20px;
     padding-left: 30px;
@@ -138,7 +138,7 @@
         .ms-Icon;
         color: @ms-color-neutralPrimary;
         content: '\e041';
-        font-size: @ms-fontSize-s;
+        font-size: @ms-font-size-s;
         height: 39px;
         line-height: 40px;
         position: absolute;
