--- a/src/components/DatePicker/DatePicker.less
+++ b/src/components/DatePicker/DatePicker.less
@@ -15,7 +15,7 @@
 // Base wrapper for the date picker.
 .ms-DatePicker-picker {
   color: @ms-color-black;
-  font-size: @ms-fontSize-m;
+  font-size: @ms-font-size-m;
   position: relative;
   text-align: left;
   z-index: @ms-zIndex-back;
