--- a/src/components/Dialog/Dialog.less
+++ b/src/components/Dialog/Dialog.less
@@ -76,7 +76,7 @@
 
   .ms-Icon.ms-Icon--x {
     color: @ms-color-neutralSecondary;
-    font-size: @ms-fontSize-m + 2;
+    font-size: @ms-font-size-m + 2;
   }
 }
 
@@ -95,7 +95,7 @@
 .ms-Dialog-title {
   margin: 0;
   font-family: @ms-font-family-light;
-  font-size: @ms-fontSize-xl;
+  font-size: @ms-font-size-xl;
 }
 
 .ms-Dialog-content {
@@ -113,7 +113,7 @@
   padding-top: 8px;
   font-family: @ms-font-family-semilight;
   color: @ms-color-neutralPrimary;
-  font-size: @ms-fontSize-s;
+  font-size: @ms-font-size-s;
 }
 
 .ms-Dialog-actions {
@@ -164,7 +164,7 @@
 //
 .ms-Dialog.ms-Dialog--multiline {
   .ms-Dialog-title {
-    font-size: @ms-fontSize-xxl;
+    font-size: @ms-font-size-xxl;
   }
 
   .ms-Dialog-inner {
@@ -183,13 +183,13 @@
   }
 
   .ms-Dialog-title {
-    font-size: @ms-fontSize-xxl;
+    font-size: @ms-font-size-xxl;
     font-family: @ms-font-family-light;
     color: @ms-color-white;
   }
 
   .ms-Dialog-subText {
-    font-size: @ms-fontSize-m;
+    font-size: @ms-font-size-m;
   }
 }
 
