--- a/src/components/NavBar/NavBar.less
+++ b/src/components/NavBar/NavBar.less
@@ -39,7 +39,7 @@
   height: 40px;
   line-height: 40px;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-fontSize-l;
+  font-size: @ms-font-size-l;
   padding-left: 20px;
   position: relative;
 
@@ -189,7 +189,7 @@
 
     .ms-ContextualMenu-link {
       font-family: @ms-font-family-semilight;
-      font-size: @ms-fontSize-l;
+      font-size: @ms-font-size-l;
     }
   }
 
@@ -234,7 +234,7 @@
   .ms-NavBar-item {
     float: left;
     margin-right: 20px;
-    font-size: @ms-fontSize-m;
+    font-size: @ms-font-size-m;
     padding: 0;
 
     &:hover {
