--- a/src/components/OrgChart/OrgChart.less
+++ b/src/components/OrgChart/OrgChart.less
@@ -65,5 +65,5 @@
 .ms-OrgChart-groupTitle {
   font-family: @ms-font-family-semilight;
   color: @ms-color-neutralSecondary;
-  font-size: @ms-fontSize-m;
+  font-size: @ms-font-size-m;
 }
