--- a/src/components/Panel/Panel.less
+++ b/src/components/Panel/Panel.less
@@ -64,14 +64,14 @@
 // Icon within a command button.
 .ms-Panel-commandIcon {
   color: @ms-color-themePrimary;
-  font-size: @ms-fontSize-mPlus;
+  font-size: @ms-font-size-mPlus;
   line-height: 40px;
   margin-right: 8px;
 }
 
 // Label for a command button.
 .ms-Panel-commandLabel {
-  font-size: @ms-fontSize-m;
+  font-size: @ms-font-size-m;
   font-family: @ms-font-family-regular;
   color: @ms-color-neutralPrimary;
 }
@@ -90,7 +90,7 @@
 // Header text at the top of the panel.
 .ms-Panel-headerText {
   font-family: @ms-font-family-light;
-  font-size: @ms-fontSize-xl;
+  font-size: @ms-font-size-xl;
   color: @ms-color-neutralPrimary;
   line-height: 82px; // Magic number that places text baseline at 50px.
   height: 70px;
