--- a/src/components/PersonaCard/PersonaCard.less
+++ b/src/components/PersonaCard/PersonaCard.less
@@ -118,7 +118,7 @@
 
 .ms-PersonaCard-overflow {
   .ms-PersonaCard-action;
-  font-size: @ms-fontSize-m;
+  font-size: @ms-font-size-m;
   font-family: @ms-font-family-semilight;
   color: @ms-color-neutralPrimary;
   float: right;
@@ -158,7 +158,7 @@
   float: left;
   min-height: 48px;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-fontSize-m;
+  font-size: @ms-font-size-m;
   color: @ms-color-neutralSecondary;
   padding: 9px 20px;
   transition: max-height @ms-duration2 @ms-ease1 .2s;
@@ -237,7 +237,7 @@
 .ms-PersonaCard-detailExpander {
   color: @ms-color-neutralPrimary;
   cursor: pointer;
-  font-size: @ms-fontSize-mPlus;
+  font-size: @ms-font-size-mPlus;
   height: 30px;
   line-height: 30px;
   margin-top: 1px;
