--- a/src/components/Pivot/Pivot.less
+++ b/src/components/Pivot/Pivot.less
@@ -19,7 +19,7 @@
   color: @ms-color-neutralPrimary;
   display: inline-block;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-fontSize-mPlus;
+  font-size: @ms-font-size-mPlus;
   line-height: 27px;
   margin-right: 15px;
 
@@ -45,7 +45,7 @@
 .ms-Pivot--large {
   // Links
   .ms-Pivot-link {
-    font-size: @ms-fontSize-l;
+    font-size: @ms-font-size-l;
 
     &.is-selected {
       font-family: @ms-font-family-semilight;
@@ -70,7 +70,7 @@
 
 // Ellipsis icon
 .ms-Pivot-ellipsis {
-  font-size: @ms-fontSize-mPlus;
+  font-size: @ms-font-size-mPlus;
   position: relative;
   top: 0;
 }
@@ -80,7 +80,7 @@
   // Overflow ellipsis
   .ms-Pivot-link.ms-Pivot-link--overflow {
     &:after {
-      font-size: @ms-fontSize-l;
+      font-size: @ms-font-size-l;
     }
   }
 }
@@ -131,13 +131,13 @@
 @media (min-width: 640px) {
   // Links
   .ms-Pivot-link {
-    font-size: @ms-fontSize-m;
+    font-size: @ms-font-size-m;
   }
 
   // Overflow ellipsis
   .ms-Pivot-link.ms-Pivot-link--overflow {
     &:after {
-      font-size: @ms-fontSize-m;
+      font-size: @ms-font-size-m;
     }
   }
 
