--- a/src/components/Table/Table.less
+++ b/src/components/Table/Table.less
@@ -14,7 +14,7 @@
   height: 30px;
   line-height: 30px;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-fontSize-s;
+  font-size: @ms-font-size-s;
   color: @ms-color-neutralPrimary;
 
   &:hover {
@@ -58,7 +58,7 @@
 // Style the first row as a header.
 .ms-Table-row:first-child {
   font-family: @ms-font-family-semilight;
-  font-size: @ms-fontSize-xs;
+  font-size: @ms-font-size-xs;
   color: @ms-color-neutralSecondary;
 
   .ms-Table-cell, .ms-Table-rowCheck {
