--- a/src/components/TextField/TextField.less
+++ b/src/components/TextField/TextField.less
@@ -46,7 +46,7 @@
   border: 1px solid @ms-color-neutralTertiaryAlt;
   border-radius: 0;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-fontSize-s;
+  font-size: @ms-font-size-s;
   color: @ms-color-neutralPrimary;
   height: 32px;
   padding: 6px 10px 8px;
@@ -80,7 +80,7 @@
   .ms-Label {
     position: absolute;
     font-family: @ms-font-family-semilight;
-    font-size: @ms-fontSize-s;
+    font-size: @ms-font-size-s;
     color: @ms-color-neutralSecondary;
     padding: 7px 0 7px 10px;
   }
@@ -113,7 +113,7 @@
   }
 
   .ms-Label {
-    font-size: @ms-fontSize-s;
+    font-size: @ms-font-size-s;
     margin-right: 8px;
     display: table-cell;
     vertical-align: bottom;
