--- a/src/less/_Fabric.Typography.Variables.less
+++ b/src/less/_Fabric.Typography.Variables.less
@@ -13,13 +13,13 @@
 //== Type sizes
 //
 
-@ms-fontSize-su:          42px;
-@ms-fontSize-xxl:         28px;
-@ms-fontSize-xl:          21px;
-@ms-fontSize-l:           17px;
-@ms-fontSize-mPlus:      15px;
-@ms-fontSize-m:           14px;
-@ms-fontSize-s-plus:      13px;
-@ms-fontSize-s:           12px;
-@ms-fontSize-xs:          11px;
-@ms-fontSize-mi:          10px;
+@ms-font-size-su:          42px;
+@ms-font-size-xxl:         28px;
+@ms-font-size-xl:          21px;
+@ms-font-size-l:           17px;
+@ms-font-size-mPlus:      15px;
+@ms-font-size-m:           14px;
+@ms-font-size-s-plus:      13px;
+@ms-font-size-s:           12px;
+@ms-font-size-xs:          11px;
+@ms-font-size-mi:          10px;
