--- a/src/less/_Fabric.Typography.less
+++ b/src/less/_Fabric.Typography.less
@@ -9,7 +9,7 @@
 .ms-font-su {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-light;
-  font-size: @ms-fontSize-su;
+  font-size: @ms-font-size-su;
   font-weight: normal;
 }
 // No touch class for Super
@@ -19,7 +19,7 @@
 .ms-font-xxl {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-light;
-  font-size: @ms-fontSize-xxl;
+  font-size: @ms-font-size-xxl;
   font-weight: normal;
 }
 
@@ -28,7 +28,7 @@
 .ms-font-xl {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-light;
-  font-size: @ms-fontSize-xl;
+  font-size: @ms-font-size-xl;
   font-weight: normal;
 }
 
@@ -37,7 +37,7 @@
 .ms-font-l {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-fontSize-l;
+  font-size: @ms-font-size-l;
   font-weight: normal;
 }
 
@@ -46,7 +46,7 @@
 .ms-font-m-plus {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-regular;
-  font-size: @ms-fontSize-mPlus;
+  font-size: @ms-font-size-mPlus;
   font-weight: normal;
 }
 
@@ -55,7 +55,7 @@
 .ms-font-m {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-regular;
-  font-size: @ms-fontSize-m;
+  font-size: @ms-font-size-m;
   font-weight: normal;
 }
 
@@ -64,7 +64,7 @@
 .ms-font-s-plus {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-regular;
-  font-size: @ms-fontSize-s-plus;
+  font-size: @ms-font-size-s-plus;
   font-weight: normal;
 }
 
@@ -73,7 +73,7 @@
 .ms-font-s {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-regular;
-  font-size: @ms-fontSize-s;
+  font-size: @ms-font-size-s;
   font-weight: normal;
 }
 
@@ -82,7 +82,7 @@
 .ms-font-xs {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-regular;
-  font-size: @ms-fontSize-xs;
+  font-size: @ms-font-size-xs;
   font-weight: normal;
 }
 
@@ -91,7 +91,7 @@
 .ms-font-mi {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-semibold;
-  font-size: @ms-fontSize-mi;
+  font-size: @ms-font-size-mi;
   font-weight: normal;
 }
 
@@ -122,43 +122,43 @@
 
 // Font sizes
 .ms-fontSize-su {
-  font-size: @ms-fontSize-su;
+  font-size: @ms-font-size-su;
 }
 
 .ms-fontSize-xxl {
-  font-size: @ms-fontSize-xxl;
+  font-size: @ms-font-size-xxl;
 }
 
 .ms-fontSize-xl {
-  font-size: @ms-fontSize-xl;
+  font-size: @ms-font-size-xl;
 }
 
 .ms-fontSize-l {
-  font-size: @ms-fontSize-l;
+  font-size: @ms-font-size-l;
 }
 
 .ms-fontSize-mPlus {
-  font-size: @ms-fontSize-mPlus;
+  font-size: @ms-font-size-mPlus;
 }
 
 .ms-fontSize-m {
-  font-size: @ms-fontSize-m;
+  font-size: @ms-font-size-m;
 }
 
 .ms-fontSize-sPlus {
-  font-size: @ms-fontSize-s-plus;
+  font-size: @ms-font-size-s-plus;
 }
 
 .ms-fontSize-s {
-  font-size: @ms-fontSize-s;
+  font-size: @ms-font-size-s;
 }
 
 .ms-fontSize-xs {
-  font-size: @ms-fontSize-xs;
+  font-size: @ms-font-size-xs;
 }
 
 .ms-fontSize-mi {
-  font-size: @ms-fontSize-mi;
+  font-size: @ms-font-size-mi;
 }
 
 // Theme colors
