Fixed font class @ms-font-size-m-plus, its not supposed to be mPlus.

--- a/src/components/Panel/Panel.less
+++ b/src/components/Panel/Panel.less
@@ -64,7 +64,7 @@
 // Icon within a command button.
 .ms-Panel-commandIcon {
   color: @ms-color-themePrimary;
-  font-size: @ms-font-size-mPlus;
+  font-size: @ms-font-size-m-plus;
   line-height: 40px;
   margin-right: 8px;
 }
