--- a/src/components/PeoplePicker/PeoplePicker.less
+++ b/src/components/PeoplePicker/PeoplePicker.less
@@ -196,7 +196,7 @@
 
   .ms-Icon {
     color: @ms-color-neutralSecondary;
-    font-size: @ms-font-size-mPlus;
+    font-size: @ms-font-size-m-plus;
     margin-top: -8px;
     position: absolute;
     text-align: center;
