--- a/src/components/PersonaCard/PersonaCard.less
+++ b/src/components/PersonaCard/PersonaCard.less
@@ -237,7 +237,7 @@
 .ms-PersonaCard-detailExpander {
   color: @ms-color-neutralPrimary;
   cursor: pointer;
-  font-size: @ms-font-size-mPlus;
+  font-size: @ms-font-size-m-plus;
   height: 30px;
   line-height: 30px;
   margin-top: 1px;
