--- a/src/components/Pivot/Pivot.less
+++ b/src/components/Pivot/Pivot.less
@@ -19,7 +19,7 @@
   color: @ms-color-neutralPrimary;
   display: inline-block;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-font-size-mPlus;
+  font-size: @ms-font-size-m-plus;
   line-height: 27px;
   margin-right: 15px;
 
@@ -70,7 +70,7 @@
 
 // Ellipsis icon
 .ms-Pivot-ellipsis {
-  font-size: @ms-font-size-mPlus;
+  font-size: @ms-font-size-m-plus;
   position: relative;
   top: 0;
 }
