--- a/src/less/_Fabric.Typography.Variables.less
+++ b/src/less/_Fabric.Typography.Variables.less
@@ -17,7 +17,7 @@
 @ms-font-size-xxl:         28px;
 @ms-font-size-xl:          21px;
 @ms-font-size-l:           17px;
-@ms-font-size-mPlus:      15px;
+@ms-font-size-m-plus:      15px;
 @ms-font-size-m:           14px;
 @ms-font-size-s-plus:      13px;
 @ms-font-size-s:           12px;
