--- a/src/less/_Fabric.Typography.less
+++ b/src/less/_Fabric.Typography.less
@@ -46,7 +46,7 @@
 .ms-font-m-plus {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-regular;
-  font-size: @ms-font-size-mPlus;
+  font-size: @ms-font-size-m-plus;
   font-weight: normal;
 }
 
@@ -138,7 +138,7 @@
 }
 
 .ms-fontSize-mPlus {
-  font-size: @ms-font-size-mPlus;
+  font-size: @ms-font-size-m-plus;
 }
 
 .ms-fontSize-m {
