Begin circle persona

--- a/src/components/Persona/Persona.less
+++ b/src/components/Persona/Persona.less
@@ -23,6 +23,53 @@
 	height: 50px;
 }
 
+.ms-Persona-imageCircle {
+  width: 50px;
+  height: 50px;
+  margin: 0;
+  overflow: hidden;
+}
+
+// Circle persona variant
+// &.ms-PersonaCard--circles {
+//   .ms-Persona.ms-Persona--xl .ms-Persona-placeholder {
+//     font-size: 75px;
+//   }
+//   .ms-Persona-placeholder {
+//     left: 1px;
+//   }
+//   .ms-Persona-imageArea {
+//     width: 100px;
+//     height: 100px;
+//     background-color: @color-neutralLighter;
+//   }
+//   .ms-Persona-imageCircle {
+//     width: 80px;
+//     height: 80px;
+//     margin: 10px auto;
+//     border-radius: 50%;
+//     overflow: hidden;
+//     position: absolute;
+//     left: 0;
+//     right: 0;
+//     background-color: @color-neutralTertiary;
+//   }
+//   .ms-Persona.ms-Persona--xl .ms-Persona-image {
+//     width: 80px;
+//     height: 80px;
+//   }
+//   .ms-Persona.ms-Persona--xl .ms-Persona-presence {
+//     height: 12px;
+//     width: 12px;
+//     border-radius: 50%;
+//     border: 2px solid @color-neutralLighter;
+//     left: auto;
+//     top: auto;
+//     right: 15px;
+//     bottom: 12px;
+//   }
+// }
+
 .ms-Persona-placeholder {
   color: @ms-color-white;
   position: absolute;
