--- a/src/templates/individual-component-example.html
+++ b/src/templates/individual-component-example.html
@@ -50,6 +50,10 @@
       height: 100%;
     }
 
+    .sample-wrapper {
+      margin: 20px;
+    }
+
     .ms-ContextualMenu.is-open  {
       position: relative;
       margin-bottom: 10px;
