--- a/src/components/Toggle/Toggle.TextLeft.html
+++ b/src/components/Toggle/Toggle.TextLeft.html
@@ -1,7 +1,7 @@
-<div class="ms-Toggle">
+<div class="ms-Toggle ms-Toggle--textLeft">
   <span class="ms-Toggle-description">Let apps use my location</span>
-  <input type="checkbox" id="demo-toggle-3" class="ms-Toggle-input" />
-  <label for="demo-toggle-3" class="ms-Toggle-field">
+  <input type="checkbox" id="demo-toggle-1" class="ms-Toggle-input" />
+  <label for="demo-toggle-1" class="ms-Toggle-field">
     <span class="ms-Label ms-Label--off">Off</span>
     <span class="ms-Label ms-Label--on">On</span>
   </label>
