Add square variants. Update styles for circle as default for all variants

--- a/src/components/Persona/Persona.Square.ExtraSmall.html
+++ b/src/components/Persona/Persona.Square.ExtraSmall.html
@@ -1,9 +1,10 @@
-<div class="ms-Persona ms-Persona--tiny">
+<div class="ms-Persona ms-Persona ms-Persona--square ms-Persona--xs">
   <div class="ms-Persona-imageArea">
+    <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
+    <img class="ms-Persona-image" src="Persona.Person2.png">
     <div class="ms-Persona-presence"></div>
   </div>
   <div class="ms-Persona-details">
     <div class="ms-Persona-primaryText">Alton Lafferty</div>
   </div>
 </div>
-
