--- a/src/components/Persona/Persona.Square.Tiny.html
+++ b/src/components/Persona/Persona.Square.Tiny.html
@@ -1,4 +1,4 @@
-<div class="ms-Persona ms-Persona--tiny">
+<div class="ms-Persona ms-Persona ms-Persona--square ms-Persona--tiny">
   <div class="ms-Persona-imageArea">
     <div class="ms-Persona-presence"></div>
   </div>
@@ -6,4 +6,3 @@
     <div class="ms-Persona-primaryText">Alton Lafferty</div>
   </div>
 </div>
-
