--- a/src/components/Persona/Persona.Square.Large.html
+++ b/src/components/Persona/Persona.Square.Large.html
@@ -1,14 +1,12 @@
-<div class="ms-Persona ms-Persona--sm">
+<div class="ms-Persona ms-Persona ms-Persona--square ms-Persona--lg">
   <div class="ms-Persona-imageArea">
-    <div class="ms-Persona-imageCircle">
-      <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
-      <img class="ms-Persona-image" src="Persona.Person2.png">
-    </div>
+    <i class="ms-Persona-placeholder ms-Icon ms-Icon--person"></i>
+    <img class="ms-Persona-image" src="Persona.Person2.png">
     <div class="ms-Persona-presence"></div>
   </div>
   <div class="ms-Persona-details">
     <div class="ms-Persona-primaryText">Alton Lafferty</div>
     <div class="ms-Persona-secondaryText">Accountant</div>
+    <div class="ms-Persona-tertiaryText">In a meeting</div>
   </div>
 </div>
-
