--- a/src/components/Persona/Persona.less
+++ b/src/components/Persona/Persona.less
@@ -17,7 +17,7 @@
 .ms-Persona-imageArea {
 	position: relative;
 	display: block;
-	background-color: @ms-color-neutralTertiary;
+	background-color: transparent;
 	overflow: hidden;
 	width: 50px;
 	height: 50px;
@@ -27,48 +27,13 @@
   width: 50px;
   height: 50px;
   margin: 0;
+  border-radius: 50%;
   overflow: hidden;
+  position: absolute;
+  left: 0;
+  right: 0;
+  background-color: @color-neutralTertiary;
 }
-
-// Circle persona variant
-// &.ms-PersonaCard--circles {
-//   .ms-Persona.ms-Persona--xl .ms-Persona-placeholder {
-//     font-size: 75px;
-//   }
-//   .ms-Persona-placeholder {
-//     left: 1px;
-//   }
-//   .ms-Persona-imageArea {
-//     width: 100px;
-//     height: 100px;
-//     background-color: @color-neutralLighter;
-//   }
-//   .ms-Persona-imageCircle {
-//     width: 80px;
-//     height: 80px;
-//     margin: 10px auto;
-//     border-radius: 50%;
-//     overflow: hidden;
-//     position: absolute;
-//     left: 0;
-//     right: 0;
-//     background-color: @color-neutralTertiary;
-//   }
-//   .ms-Persona.ms-Persona--xl .ms-Persona-image {
-//     width: 80px;
-//     height: 80px;
-//   }
-//   .ms-Persona.ms-Persona--xl .ms-Persona-presence {
-//     height: 12px;
-//     width: 12px;
-//     border-radius: 50%;
-//     border: 2px solid @color-neutralLighter;
-//     left: auto;
-//     top: auto;
-//     right: 15px;
-//     bottom: 12px;
-//   }
-// }
 
 .ms-Persona-placeholder {
   color: @ms-color-white;
@@ -95,11 +60,15 @@
 
 .ms-Persona-presence {
 	background-color: @ms-color-presence-available;
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 50px;
-	width: 5px;
+  position: absolute;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  top: auto;
+  left: auto;
+  right: 2px;
+  bottom: -1px;
+  border: 2px solid @color-white;
 }
 
 .ms-Persona-details {
@@ -129,12 +98,31 @@
 }
 
 
+//== Modifier: Persona with square images
+//
+.ms-Persona.ms-Persona--square {
+	.ms-Persona-imageArea {
+		background-color: @ms-color-neutralTertiary;
+	}
+
+	.ms-Persona-presence {
+		top: 0;
+		left: 0;
+		bottom: auto;
+		right: auto;
+		height: 50px;
+		width: 5px;
+		border-radius: 0;
+		border: 0;
+	}
+}
+
+
 //== Modifier: Tiny Persona
 //
 .ms-Persona.ms-Persona--tiny {
 	height: 30px;
-	padding: 0 10px;
-	background-color: @ms-color-neutralLighter;
+	background-color: @ms-color-white;
 	display: inline-block;
 
 	.ms-Persona-imageArea {
@@ -150,12 +138,14 @@
 		display: none;
 	}
 	.ms-Persona-presence {
-		height: 10px;
-		width: 10px;
-		top: 10px;
+		right: auto;
+		height: 20px;
+		width: 20px;
+		top: 5px;
+		border: 0;
 	}
 	.ms-Persona-details {
-		padding-left: 15px;
+		padding-left: 28px;
 	}
 	.ms-Persona-primaryText {
 		color: @ms-color-neutralPrimary;
@@ -177,11 +167,25 @@
 	}
 }
 
+.ms-Persona.ms-Persona--square.ms-Persona--tiny {
+	.ms-Persona-presence {
+		height: 10px;
+		width: 10px;
+		top: 10px;
+	}
+
+	.ms-Persona-details {
+		padding-left: 18px;
+	}
+}
+
 
 //== Modifier: Extra Small Persona
 //
 .ms-Persona.ms-Persona--xs {
-	.ms-Persona-imageArea, .ms-Persona-image {
+	.ms-Persona-imageArea,
+	.ms-Persona-imageCircle,
+	.ms-Persona-image {
 	  width: 30px;
 	  height: 30px;
 	}
@@ -190,8 +194,10 @@
 	  top: 4px;
 	}
 	.ms-Persona-presence {
-		height: 30px;
-		width: 4px;
+		height: 8px;
+		width: 8px;
+		right: -1px;
+		bottom: -1px;
 	}
 	.ms-Persona-primaryText {
 		font-size: @ms-font-size-m;
@@ -202,11 +208,19 @@
 	}
 }
 
+.ms-Persona.ms-Persona--square.ms-Persona--xs {
+	.ms-Persona-presence {
+		height: 30px;
+		width: 4px;
+	}
+}
 
 //== Modifier: Small Persona
 //
 .ms-Persona.ms-Persona--sm {
-	.ms-Persona-imageArea, .ms-Persona-image {
+	.ms-Persona-imageArea,
+	.ms-Persona-imageCircle,
+	.ms-Persona-image {
 	  width: 40px;
 	  height: 40px;
 	}
@@ -215,8 +229,10 @@
 	  top: 5px;
 	}
 	.ms-Persona-presence {
-		height: 40px;
-		width: 4px;
+		height: 10px;
+		width: 10px;
+		right: -1px;
+		bottom: -1px;
 	}
 	.ms-Persona-primaryText {
 		font-size: @ms-font-size-m;
@@ -227,11 +243,20 @@
 	}
 }
 
+.ms-Persona.ms-Persona--square.ms-Persona--sm {
+	.ms-Persona-presence {
+		height: 40px;
+		width: 4px;
+	}
+}
+
 
 //== Modifier: Large Persona
 //
 .ms-Persona.ms-Persona--lg {
-	.ms-Persona-imageArea, .ms-Persona-image {
+	.ms-Persona-imageArea,
+	.ms-Persona-imageCircle,
+	.ms-Persona-image {
 	  width: 70px;
 	  height: 70px;
 	}
@@ -240,8 +265,8 @@
 	  top: 9px;
 	}
 	.ms-Persona-presence {
-		height: 70px;
-		width: 7px;
+		height: 16px;
+		width: 16px;
 	}
 	.ms-Persona-primaryText {
 		font-family: @ms-font-family-regular;
@@ -251,11 +276,20 @@
 	}
 }
 
+.ms-Persona.ms-Persona--square.ms-Persona--lg {
+	.ms-Persona-presence {
+		height: 70px;
+		width: 7px;
+	}
+}
+
 
 //== Modifier: Extra Large Persona
 //
 .ms-Persona.ms-Persona--xl {
-	.ms-Persona-imageArea, .ms-Persona-image {
+	.ms-Persona-imageArea,
+	.ms-Persona-imageCircle,
+	.ms-Persona-image {
 	  width: 100px;
 	  height: 100px;
 	}
@@ -264,8 +298,8 @@
 	  top: 12px;
 	}
 	.ms-Persona-presence {
-		height: 100px;
-		width: 9px;
+		height: 24px;
+		width: 24px;
 	}
 	.ms-Persona-details {
 		padding-left: 20px;
@@ -281,6 +315,13 @@
 	.ms-Persona-tertiaryText, .ms-Persona-optionalText {
 		display: block;
 		padding-top: 8px;
+	}
+}
+
+.ms-Persona.ms-Persona--square.ms-Persona--xl {
+	.ms-Persona-presence {
+		height: 100px;
+		width: 9px;
 	}
 }
 
