--- a/src/components/ChoiceField/ChoiceField.less
+++ b/src/components/ChoiceField/ChoiceField.less
@@ -8,7 +8,7 @@
 .ms-ChoiceField {
 	.ms-font-m;
 	.ms-u-normalize;
-	height: 36px;
+	min-height: 36px;
 	position: relative;
 
 	.ms-ChoiceField-input { 
@@ -17,32 +17,41 @@
 		top: 8px;
 
 		&:focus:not(:disabled) {
-			+ .ms-ChoiceField-field {
+			+ .ms-ChoiceField-field:after {
 				border-color: @ms-color-neutralSecondaryAlt;
 			}
 		}
 	}
 
 	.ms-ChoiceField-field {
-		border: 1px @ms-color-neutralTertiaryAlt solid;
 		display: inline-block;
-		width: 19px;
-		height: 19px;
 		cursor: pointer;
 		margin-top: 8px;
 		position: relative;
-		border-radius: 50%;
+
+		&:after {
+			content: '';
+			display: inline-block;
+			border: 1px @ms-color-neutralTertiaryAlt solid;
+			width: 19px;
+			height: 19px;
+			cursor: pointer;
+			position: relative;
+			font-weight: normal;
+			left: -1px;
+			top: -1px;
+			border-radius: 50%;
+			position: absolute;			
+		}
 	}
 
 	.ms-Label {
-		padding-left: 26px;
-		position: absolute;
-		top: -8px;
 		font-size: @ms-font-size-m;
+		padding: 0 0 0 26px;
 	}
 
 	&:hover {
-		.ms-ChoiceField-field {
+		.ms-ChoiceField-field:after {
 			border-color: @ms-color-neutralSecondaryAlt;
 		}
 
@@ -66,14 +75,17 @@
 				content: '\00a0';
 				display: inline-block;
 				position: absolute;
-				top: 0;
+				top: 4px;
 				right: 0;
-				left: 0;
 				bottom: 0;
-				margin: auto;
+				left: 4px;
 				width: 11px;
 				height: 11px;
 				box-sizing: border-box;
+			}
+
+			&:after {
+				border-radius: 50%;
 			}
 
 			.ms-Label {
@@ -109,7 +121,7 @@
 			pointer-events: none;
 			
 			&:focus {
-				+ .ms-ChoiceField-field {
+				+ .ms-ChoiceField-field:after {
 					border-color: @ms-color-neutralLight;
 				}
 			}
@@ -118,9 +130,12 @@
 		.ms-ChoiceField-field {
 			pointer-events: none;
 			cursor: default;
-			border-color: @ms-color-neutralLight;
 
-			&:hover {
+			&:after {
+				border-color: @ms-color-neutralLight;
+			}
+
+			&:hover:after {
 				border-color: @ms-color-neutralLight;
 			}
 		}
@@ -150,7 +165,7 @@
 	.ms-ChoiceField-input[type="checkbox"] {
 
 		// Unchecked
-		+ .ms-ChoiceField-field {
+		+ .ms-ChoiceField-field:after {
 			border-radius: 0;
 		}
 
@@ -161,17 +176,20 @@
 			background-color: transparent;
 			border-radius: 0;
 			font-size: 13px;
-			top: -1px;
-			left: -1px;
+			top: 3px;
+			left: 3px;
 		}
 
 		// Disabled
 		&:disabled + .ms-ChoiceField-field {
-			border-color: @ms-color-neutralTertiary;
 			cursor: default;
 
 			&:before {
 				color: @ms-color-neutralTertiary;
+			}
+
+			&:after {
+				border-color: @ms-color-neutralTertiary;
 			}
 		}
 
