Adding textfield-description to the TextField component

--- a/src/components/TextField/TextField.html
+++ b/src/components/TextField/TextField.html
@@ -1,4 +1,5 @@
 <div class="ms-TextField">
   <label class="ms-Label">Name</label>
   <input class="ms-TextField-field">
+  <span class="ms-TextField-description">This should be your first and last name.</span>
 </div>
