--- a/src/components/TextField/TextField.less
+++ b/src/components/TextField/TextField.less
@@ -71,6 +71,11 @@
   })
 }
 
+.ms-TextField-description {
+  color: @ms-color-neutralSecondaryAlt;
+  font-size: @ms-font-size-xs;
+}
+
 
 //== Modifier: Single line (default), placeholder label
 //
